@@ -21,15 +21,17 @@ import static com.google.common.base.Preconditions.checkState;
 
 import android.content.Context;
 import android.content.res.Resources;
-import android.graphics.Color;
-import android.graphics.drawable.ColorDrawable;
 import android.graphics.drawable.Drawable;
+import android.graphics.drawable.ShapeDrawable;
+import android.graphics.drawable.shapes.OvalShape;
 import android.util.AttributeSet;
 import android.view.LayoutInflater;
 import android.view.View;
+import android.view.ViewGroup;
 import android.view.ViewTreeObserver;
 import android.widget.ImageView;
 import android.widget.LinearLayout;
+import android.widget.TextView;
 
 import androidx.annotation.Nullable;
 import androidx.annotation.VisibleForTesting;
@@ -37,11 +39,12 @@ import androidx.preference.PreferenceViewHolder;
 
 import com.android.settings.R;
 import com.android.settingslib.RestrictedPreference;
+import com.android.settingslib.Utils;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.Executor;
 
@@ -50,8 +53,9 @@ public class CircularIconsPreference extends RestrictedPreference {
     private Executor mUiExecutor;
     @Nullable private LinearLayout mIconContainer;
 
-    @Nullable private CircularIconSet<?> mPendingIconSet;
-    @Nullable private ListenableFuture<?> mPendingLoadIconsFuture;
+    @Nullable private CircularIconSet<?> mIconSet;
+    @Nullable private CircularIconSet<?> mPendingDisplayIconSet;
+    @Nullable private ListenableFuture<List<Drawable>> mPendingLoadIconsFuture;
 
     public CircularIconsPreference(Context context) {
         super(context);
@@ -94,17 +98,25 @@ public class CircularIconsPreference extends RestrictedPreference {
     }
 
     private void displayIconsIfPending() {
-        CircularIconSet<?> pendingIconSet = mPendingIconSet;
+        CircularIconSet<?> pendingIconSet = mPendingDisplayIconSet;
         if (pendingIconSet != null) {
-            mPendingIconSet = null;
-            displayIcons(pendingIconSet);
+            mPendingDisplayIconSet = null;
+            displayIconsInternal(pendingIconSet);
         }
     }
 
     void displayIcons(CircularIconSet<?> iconSet) {
+        if (mIconSet != null && mIconSet.hasSameItemsAs(iconSet)) {
+            return;
+        }
+        mIconSet = iconSet;
+        displayIconsInternal(iconSet);
+    }
+
+    void displayIconsInternal(CircularIconSet<?> iconSet) {
         if (mIconContainer == null) {
             // Too soon, wait for bind.
-            mPendingIconSet = iconSet;
+            mPendingDisplayIconSet = iconSet;
             return;
         }
         mIconContainer.setVisibility(iconSet.size() != 0 ? View.VISIBLE : View.GONE);
@@ -113,30 +125,31 @@ public class CircularIconsPreference extends RestrictedPreference {
         }
         if (mIconContainer.getMeasuredWidth() == 0) {
             // Too soon, wait for first measure to know width.
-            mPendingIconSet = iconSet;
-            ViewTreeObserver vto = mIconContainer.getViewTreeObserver();
-            vto.addOnGlobalLayoutListener(() ->
+            mPendingDisplayIconSet = iconSet;
+            mIconContainer.getViewTreeObserver().addOnGlobalLayoutListener(
                     new ViewTreeObserver.OnGlobalLayoutListener() {
                         @Override
                         public void onGlobalLayout() {
-                            vto.removeOnGlobalLayoutListener(this);
+                            checkNotNull(mIconContainer).getViewTreeObserver()
+                                    .removeOnGlobalLayoutListener(this);
                             displayIconsIfPending();
                         }
-                    });
+                    }
+            );
             return;
         }
 
         mIconContainer.setVisibility(View.VISIBLE);
         Resources res = getContext().getResources();
         int availableSpace = mIconContainer.getMeasuredWidth();
-        int iconHorizontalSpace = res.getDimensionPixelSize(R.dimen.zen_mode_circular_icon_size)
+        int iconHorizontalSpace = res.getDimensionPixelSize(R.dimen.zen_mode_circular_icon_diameter)
                 + res.getDimensionPixelSize(R.dimen.zen_mode_circular_icon_margin_between);
         int numIconsThatFit = availableSpace / iconHorizontalSpace;
 
         List<ListenableFuture<Drawable>> iconFutures;
-        int extraItems = 0;
+        int extraItems;
         if (iconSet.size() > numIconsThatFit) {
-            // Reserve one space for the (+xx) circle.
+            // Reserve one space for the (+xx) textview.
             int numIconsToShow = numIconsThatFit - 1;
             if (numIconsToShow < 0) {
                 numIconsToShow = 0;
@@ -146,6 +159,7 @@ public class CircularIconsPreference extends RestrictedPreference {
         } else {
             // Fit exactly or with remaining space.
             iconFutures = iconSet.getIcons();
+            extraItems = 0;
         }
 
         displayIconsWhenReady(iconFutures, extraItems);
@@ -158,33 +172,45 @@ public class CircularIconsPreference extends RestrictedPreference {
             mPendingLoadIconsFuture.cancel(true);
         }
 
-        int numCircles = iconFutures.size() + (extraItems > 0 ? 1 : 0);
-        if (mIconContainer.getChildCount() > numCircles) {
-            mIconContainer.removeViews(numCircles, mIconContainer.getChildCount() - numCircles);
+        // Rearrange child views until we have <numImages> ImageViews...
+        LayoutInflater inflater = LayoutInflater.from(getContext());
+        int numImages = iconFutures.size();
+        int numImageViews = getChildCount(mIconContainer, ImageView.class);
+        if (numImages > numImageViews) {
+            for (int i = 0; i < numImages - numImageViews; i++) {
+                ImageView imageView = (ImageView) inflater.inflate(
+                        R.layout.preference_circular_icons_item, mIconContainer, false);
+                mIconContainer.addView(imageView, 0);
+            }
+        } else if (numImageViews > numImages) {
+            for (int i = 0; i < numImageViews - numImages; i++) {
+                mIconContainer.removeViewAt(0);
+            }
         }
-        for (int i = mIconContainer.getChildCount(); i < numCircles; i++) {
-            ImageView imageView = (ImageView) LayoutInflater.from(getContext()).inflate(
-                    R.layout.preference_circular_icons_item, mIconContainer, false);
-            mIconContainer.addView(imageView);
+        // ... plus 0/1 TextViews at the end.
+        if (extraItems > 0 && !(getLastChild(mIconContainer) instanceof TextView)) {
+            // TODO: b/346551087 - Check TODO in preference_circular_icons_plus_item_background
+            TextView plusView = (TextView) inflater.inflate(
+                    R.layout.preference_circular_icons_plus_item, mIconContainer, false);
+            mIconContainer.addView(plusView);
+        } else if (extraItems == 0 && (getLastChild(mIconContainer) instanceof TextView)) {
+            mIconContainer.removeViewAt(mIconContainer.getChildCount() - 1);
         }
 
         // Set up placeholders and extra items indicator.
-        for (int i = 0; i < iconFutures.size(); i++) {
+        for (int i = 0; i < numImages; i++) {
             ImageView imageView = (ImageView) mIconContainer.getChildAt(i);
-            // TODO: b/346551087 - proper color and shape, should be a gray circle.
-            imageView.setImageDrawable(new ColorDrawable(Color.RED));
+            imageView.setImageDrawable(getPlaceholderImage(getContext()));
         }
         if (extraItems > 0) {
-            ImageView imageView = (ImageView) mIconContainer.getChildAt(
-                    mIconContainer.getChildCount() - 1);
-            // TODO: b/346551087 - proper color and shape and number.
-            imageView.setImageDrawable(new ColorDrawable(Color.BLUE));
+            TextView textView = (TextView) checkNotNull(getLastChild(mIconContainer));
+            textView.setText(getContext().getString(R.string.zen_mode_plus_n_items, extraItems));
         }
 
         // Display icons when all are ready (more consistent than randomly loading).
         mPendingLoadIconsFuture = Futures.allAsList(iconFutures);
         FutureUtil.whenDone(
-                Futures.allAsList(iconFutures),
+                mPendingLoadIconsFuture,
                 icons -> {
                     checkState(mIconContainer != null);
                     for (int i = 0; i < icons.size(); i++) {
@@ -194,15 +220,54 @@ public class CircularIconsPreference extends RestrictedPreference {
                 mUiExecutor);
     }
 
+    private static Drawable getPlaceholderImage(Context context) {
+        ShapeDrawable placeholder = new ShapeDrawable(new OvalShape());
+        placeholder.setTintList(Utils.getColorAttr(context,
+                com.android.internal.R.attr.materialColorSecondaryContainer));
+        return placeholder;
+    }
+
+    private static int getChildCount(ViewGroup parent, Class<? extends View> childClass) {
+        int count = 0;
+        for (int i = 0; i < parent.getChildCount(); i++) {
+            if (childClass.isInstance(parent.getChildAt(i))) {
+                count++;
+            }
+        }
+        return count;
+    }
+
+    @Nullable
+    private static View getLastChild(ViewGroup parent) {
+        if (parent.getChildCount() == 0) {
+            return null;
+        }
+        return parent.getChildAt(parent.getChildCount() - 1);
+    }
+
     @VisibleForTesting(otherwise = VisibleForTesting.NONE)
-    ImmutableList<ImageView> getIconViews() {
+    List<Drawable> getIcons() {
         if (mIconContainer == null) {
-            return ImmutableList.of();
+            return List.of();
         }
-        ImmutableList.Builder<ImageView> imageViews = new ImmutableList.Builder<>();
-        for (int i = 0; i < mIconContainer.getChildCount(); i++) {
-            imageViews.add((ImageView) mIconContainer.getChildAt(i));
+        ArrayList<Drawable> drawables = new ArrayList<>();
+        for (int i = 0; i < getChildCount(mIconContainer, ImageView.class); i++) {
+            drawables.add(((ImageView) mIconContainer.getChildAt(i)).getDrawable());
         }
-        return imageViews.build();
+        return drawables;
+    }
+
+    @VisibleForTesting(otherwise = VisibleForTesting.NONE)
+    @Nullable
+    String getPlusText() {
+        if (mIconContainer == null) {
+            return null;
+        }
+        View lastChild = getLastChild(mIconContainer);
+        if (lastChild instanceof TextView tv) {
+            return tv.getText() != null ? tv.getText().toString() : null;
+        } else {
+            return null;
+        }
     }
 }
